chore: numerous changes and improvements were made
