# src/app/routes/users.ts
@@ -1,6 +1,11 @@
 import express from 'express';
 
-import { getUsers, getCheckUser, getUserAndBooks, deleteAccount } from "../controllers/userController";
+import {
+  getUsers,
+  getCheckUser,
+  getUserAndBooks,
+  deleteAccount
+} from "../controllers/userController";
 import { verifyToken } from "../middlewares/verifyToken";
 
 const router = express.Router();
@@ -8,7 +13,7 @@ const router = express.Router();
 // Usuarios
 router.get('/', getUsers);
 router.get('/check-user/:userId', getCheckUser);
-router.get('/:username/my-books/:userId', verifyToken, getUserAndBooks);
-router.delete('/delete-account/:userId', deleteAccount);
+router.get('/:userId/:username/my-books', verifyToken, getUserAndBooks);
+router.delete('/:userId', deleteAccount);
 
 export default router;
